<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <EditText
        android:id="@+id/txbNumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="101dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/numeroControl"
        android:inputType="number"
        android:text="@string/numeroControl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txbCarrera"
        tools:text="@string/numeroControl" />

    <EditText
        android:id="@+id/txbNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="101dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:text="@string/nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBusqueda"
        tools:text="@string/nombre" />

    <EditText
        android:id="@+id/txbCarrera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/carrera"
        android:inputType="textPersonName"
        android:text="@string/carrera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txbNombre"
        tools:text="@string/carrera" />

    <EditText
        android:id="@+id/txbBusqueda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="101dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/busquedaNum"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBusqueda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="217dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="101dp"
        android:onClick="Buscar"
        android:text="@string/btnBuscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txbBusqueda" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="209dp"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="88dp"
        android:onClick="Guardar"
        android:text="@string/guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txbNumero" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="608dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txbBusqueda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/abc_vector_test" />
</androidx.constraintlayout.widget.ConstraintLayout>